--- a/themes/bootstrap-theme/layouts/partials/footer.html
+++ b/themes/bootstrap-theme/layouts/partials/footer.html
@@ -1,16 +1,5 @@
-<footer class="footer mt-5">
+<footer class="footer my-5">
   <div class="container">
-    <table class="table table-sm">
-      <caption>Hugo Variables for current page</caption>
-      <tr><th>Name</th><td>{{ .Name }}</td></tr>
-      <tr><th>Kind</th><td>{{ .Kind }}</td></tr>
-      <tr><th>Type</th><td>{{ .Type }}</td></tr>
-      <tr><th>List Page</th><td>.Pages</td></tr>
-      <tr><th>IsPage</th><td>{{ .IsPage }}</td></tr>
-      <tr><th>IsHome</th><td>{{ .IsPage }}</td></tr>
-      <tr><th>Next</th><td>{{ .Next }}</td></tr>
-      <tr><th>Prev</th><td>{{ .Prev }}</td></tr>
-      <tr><th>Section</th><td>{{ .CurrentSection }}</td></tr>
-    </table>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"/></a>
   </div>
 </footer>
